# terry

./: Cargo.toml  HISTORY.md  README.md  generatepackets.py  genrust.py  mps.md
proxy/: README.md  handler.py  proxy.py
src/: main.rs  net.rs  serialization.rs
src/packets/: add_npc_buff.rs  add_player_buff.rs  angler_quest.rs  catch_npc.rs  (+287 more)
terraria-protocol/: Cargo.toml  README.md
terraria-protocol/src/: lib.rs  main.rs  net.rs  packet.rs  parser.rs  utils.rs
terraria-protocol/src/packets/: add_npc_buff.rs  add_player_buff.rs  angler_quest.rs  angler_quests.rs  catch_npc.rs  client_synced_inventory.rs  client_uuid.rs  combat_text.rs  complete_angler_quest.rs  complete_connection_and_spawn.rs  connect.rs  connection_complete.rs  create_combat_text.rs  create_temporary_animation.rs  crystal_invasion_start.rs  crystal_invasion_wait.rs  crystal_invasion_wipe.rs  dead_player.rs  destroy_projectile.rs  disconnect.rs  doll_sync.rs  door_toggle.rs  emoji.rs  fish_out_npc.rs  gem_lock_toggle.rs  get_chest_name.rs  grow_fx.rs  hat_rack_sync.rs  heal_effect.rs  heal_other_player.rs  hit_switch.rs  interact_tile_entity.rs  invasion_progress.rs  kill_portal.rs  land_golf_ball.rs  load_net_module.rs  mana_effect.rs  mass_consume_wire.rs  mass_wire.rs  mod.rs  (+107 more)
terraria-protocol/src/serde/: core.rs  mod.rs
terraria-protocol/src/structures/: bitflags.rs  chest.rs  core.rs  liquid_type.rs  mod.rs  net_string.rs  player_death_reason.rs  rgb.rs  serialization.rs  sign.rs  tile.rs  tile_entity.rs  vec2.rs
terry/: Cargo.toml  README.md
terry-proxy/: Cargo.toml  README.md
(+12 files in other folders)
